@@ -39,8 +39,8 @@ COM_TEMPLATES_FIELD_TITLE_DESC="Style Name"
 COM_TEMPLATES_FIELD_TITLE_LABEL="Style Name"
 COM_TEMPLATES_FILE_SAVE_SUCCESS="File successfully saved"
 COM_TEMPLATES_FILTER_TEMPLATE="- Select Template -"
-COM_TEMPLATES_FTP_DESC="???"
-COM_TEMPLATES_FTP_TITLE="???"
+COM_TEMPLATES_FTP_DESC="For updating the template source files, Joomla! will most likely need your FTP account details. Please enter them in the form fields below."
+COM_TEMPLATES_FTP_TITLE="FTP Login Details"
 COM_TEMPLATES_GRID_UNSET_LANGUAGE="Unset %s Default"
 COM_TEMPLATES_HEADING_ASSIGNED="Assigned"
 COM_TEMPLATES_HEADING_DEFAULT="Default"
